--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.0",
     "@angular/localize": "^15.2.6",
     "@angular/material": "^15.2.6",
@@ -24,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "angular-in-memory-web-api": "^0.15.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.23.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
